[tool.poetry]
name = "piperider"
version = "0.1.0"
description = ""
authors = ["48650930+zinkosuke@users.noreply.github.com"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = ">=1.15.0,<1.16.0"
pendulum = ">=2.0,<3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
force_single_line = true

[tool.pytest.ini_options]
# addopts = "--capture=no -x --doctest-modules -v --cov=. --cov-report=html"
addopts = "--capture=sys -x --doctest-modules -v --cov=. --cov-report=html"
cache_dir = "/tmp/.pytest_cache"
python_files = [
    "tests.py",
    "test_*.py",
]
python_classes = "Test"
python_functions = "test_"
testpaths = "."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
